--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <div class="slider">    
         <h1> slide one </h1>
         <h1> slide tow </h1>
+        <footer>
+            footer
+        </footer>
     </div>
 </body>
 </html>
