--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1> slide tow </h1>
         <h1>slide three</h1>
         <footer>
-            footer
+            allright are reserved
         </footer>
     </div>
 </body>
