--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <header>
         header
     </header>
+    <span>
+
+    </span>
     <div class="slider">    
         <h1> slide one </h1>
         <h1> slide tow </h1>
@@ -18,5 +21,8 @@
             allright are reserved
         </footer>
     </div>
+    <script>
+        
+    </script>
 </body>
 </html>
