--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hello git</title>
     <title>modify</title>
 </head>
+
 <body>
     <header>
         header 4545
@@ -13,16 +15,18 @@
     <span>
 
     </span>
-    <div class="slider">    
+    <div class="slider">
         <h1> slide one </h1>
         <h1> slide tow </h1>
         <h1>slide three</h1>
+        <h1>slide four</h1>
         <footer>
             allright are reserved
         </footer>
     </div>
     <script>
-        
+
     </script>
 </body>
+
 </html>
